[gd_scene load_steps=56 format=3 uid="uid://chmdbpxvcc4i8"]

[ext_resource type="Script" path="res://entities/player/player.gd" id="1_mms2d"]
[ext_resource type="Shader" path="res://entities/enemies/hitflash.gdshader" id="3_ipirm"]
[ext_resource type="Texture2D" uid="uid://5dnnp3572v8l" path="res://entities/player/assets/allegro idle.png" id="3_qj282"]
[ext_resource type="Texture2D" uid="uid://bvch08qk537ub" path="res://entities/player/assets/allegro walking.png" id="4_06648"]
[ext_resource type="Texture2D" uid="uid://b83h74p34wdcs" path="res://entities/player/assets/allegro attack.png" id="4_dp6bn"]
[ext_resource type="AudioStream" uid="uid://bcs16peammwkq" path="res://audio/sfx/saxophone_dash.wav" id="5_be1l6"]
[ext_resource type="AudioStream" uid="uid://bjbrmgr37hiic" path="res://audio/sfx/saxophone_charge_up.wav" id="6_jgj6o"]
[ext_resource type="Texture2D" uid="uid://cgr6iicy2glm5" path="res://entities/player/assets/drum attack.PNG" id="6_lgbf4"]
[ext_resource type="AudioStream" uid="uid://baga0cnj2pr06" path="res://audio/sfx/double_drump.wav" id="7_6icqt"]
[ext_resource type="Texture2D" uid="uid://bcbuffgbqgav3" path="res://entities/player/assets/allegro jumping.png" id="7_48w6e"]
[ext_resource type="AudioStream" uid="uid://dauu0hcu7dqm0" path="res://audio/sfx/violin_wall_jump.wav" id="8_3mujn"]
[ext_resource type="Texture2D" uid="uid://2yaqpmw67k24" path="res://entities/player/assets/allegro wall hang.PNG" id="8_bs0tv"]
[ext_resource type="Texture2D" uid="uid://dciq4l8a58eed" path="res://entities/player/assets/saxophone attack.PNG" id="9_bvmgo"]
[ext_resource type="Texture2D" uid="uid://dv7thg3eyupk3" path="res://entities/player/assets/sword smear.PNG" id="10_a0kgg"]
[ext_resource type="Texture2D" uid="uid://e76rka8hl581" path="res://entities/player/assets/drum particle.PNG" id="11_adlnf"]
[ext_resource type="Texture2D" uid="uid://dmrvimmclp5e1" path="res://entities/player/assets/violin hat thing.PNG" id="12_6v1ix"]
[ext_resource type="AudioStream" uid="uid://d1sfa5qncfetn" path="res://audio/sfx/sax attack.wav" id="19_m4wco"]
[ext_resource type="AudioStream" uid="uid://np8hv1scl3r6" path="res://audio/sfx/batonwhoosh.wav" id="21_iciqu"]
[ext_resource type="AudioStream" uid="uid://c0xgbtvjuwl53" path="res://audio/sfx/hit.wav" id="22_4et5o"]
[ext_resource type="AudioStream" uid="uid://cd6sfaxvg7r84" path="res://audio/sfx/crit.wav" id="23_ww7p6"]
[ext_resource type="AudioStream" uid="uid://b0y7su5n0kbn3" path="res://audio/sfx/violinattack.wav" id="24_2icu5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kco12"]
size = Vector2(10, 30)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_t3cna"]
resource_local_to_scene = true
shader = ExtResource("3_ipirm")
shader_parameter/flash_color = Color(1, 0.187881, 0.138683, 1)
shader_parameter/flash_value = null

[sub_resource type="AtlasTexture" id="AtlasTexture_8mt2l"]
atlas = ExtResource("9_bvmgo")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r2h6r"]
atlas = ExtResource("4_dp6bn")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hcedg"]
atlas = ExtResource("4_dp6bn")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wkska"]
atlas = ExtResource("4_dp6bn")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ltgf"]
atlas = ExtResource("4_06648")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2rnrl"]
atlas = ExtResource("4_06648")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pe8mo"]
atlas = ExtResource("4_06648")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gfj1h"]
atlas = ExtResource("6_lgbf4")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rmkb"]
atlas = ExtResource("6_lgbf4")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_irkow"]
atlas = ExtResource("7_48w6e")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nupj2"]
atlas = ExtResource("3_qj282")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pniv0"]
atlas = ExtResource("3_qj282")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_70r07"]
atlas = ExtResource("3_qj282")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jnx0d"]
atlas = ExtResource("3_qj282")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mqux0"]
atlas = ExtResource("7_48w6e")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1sac8"]
atlas = ExtResource("7_48w6e")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_50vfe"]
atlas = ExtResource("9_bvmgo")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jjj55"]
atlas = ExtResource("9_bvmgo")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y7hxt"]
atlas = ExtResource("9_bvmgo")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l8rbq"]
atlas = ExtResource("9_bvmgo")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjy8o"]
atlas = ExtResource("9_bvmgo")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tb4yu"]
atlas = ExtResource("9_bvmgo")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uaiih"]
atlas = ExtResource("9_bvmgo")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujqgt"]
atlas = ExtResource("8_bs0tv")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_2j7hi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8mt2l")
}],
"loop": true,
"name": &"aim",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r2h6r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hcedg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wkska")
}],
"loop": true,
"name": &"baton_attack",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ltgf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2rnrl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pe8mo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2rnrl")
}],
"loop": true,
"name": &"charge_up",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfj1h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rmkb")
}],
"loop": true,
"name": &"drum_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_irkow")
}],
"loop": true,
"name": &"falling",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nupj2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pniv0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70r07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jnx0d")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqux0")
}],
"loop": true,
"name": &"jump_apex",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1sac8")
}],
"loop": true,
"name": &"jump_start",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_50vfe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jjj55")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7hxt")
}],
"loop": true,
"name": &"sax_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l8rbq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjy8o")
}],
"loop": true,
"name": &"shooting",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ltgf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tb4yu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pe8mo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uaiih")
}],
"loop": true,
"name": &"sprint",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ltgf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2rnrl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pe8mo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2rnrl")
}],
"loop": true,
"name": &"walk",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujqgt")
}],
"loop": true,
"name": &"wall_slide",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_qrclp"]
length = 0.002
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [null]
}

[sub_resource type="Animation" id="Animation_568ff"]
resource_name = "flash"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_armpr"]
_data = {
"RESET": SubResource("Animation_qrclp"),
"flash": SubResource("Animation_568ff")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_8nlni"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_a0kgg")
}],
"loop": true,
"name": &"smear",
"speed": 1.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_2f7bc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_6v1ix")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_t01df"]
radius = 48.0104

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b5c5w"]
size = Vector2(32.75, 25)

[node name="Player" type="CharacterBody2D"]
z_index = 3
collision_layer = 2
collision_mask = 4
safe_margin = 0.1
script = ExtResource("1_mms2d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, 1)
shape = SubResource("RectangleShape2D_kco12")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_t3cna")
sprite_frames = SubResource("SpriteFrames_2j7hi")
animation = &"shooting"

[node name="HitFlash" type="AnimationPlayer" parent="AnimatedSprite2D"]
libraries = {
"": SubResource("AnimationLibrary_armpr")
}

[node name="SwordSmear" type="AnimatedSprite2D" parent="AnimatedSprite2D"]
visible = false
position = Vector2(17, 4)
sprite_frames = SubResource("SpriteFrames_8nlni")
animation = &"smear"
frame_progress = 0.481864

[node name="DrumWave" type="Sprite2D" parent="AnimatedSprite2D"]
visible = false
z_index = -3
texture = ExtResource("11_adlnf")

[node name="ViolinSpike" type="Node2D" parent="AnimatedSprite2D"]
visible = false

[node name="TopSpike" type="AnimatedSprite2D" parent="AnimatedSprite2D/ViolinSpike"]
position = Vector2(-1.5, -25)
sprite_frames = SubResource("SpriteFrames_2f7bc")

[node name="BotSpike" type="AnimatedSprite2D" parent="AnimatedSprite2D/ViolinSpike"]
position = Vector2(-1, 31)
rotation = 3.14159
sprite_frames = SubResource("SpriteFrames_2f7bc")

[node name="DrumKnockback" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="DrumTimer" type="Timer" parent="DrumKnockback"]
wait_time = 0.3
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="DrumKnockback"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_t01df")
disabled = true

[node name="BatonArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 72

[node name="BatonAtack" type="CollisionShape2D" parent="BatonArea"]
position = Vector2(16, 3)
shape = SubResource("RectangleShape2D_b5c5w")
disabled = true
debug_color = Color(0.861381, 0.245675, 0.664147, 0.42)

[node name="BatonTimer" type="Timer" parent="BatonArea/BatonAtack"]
wait_time = 0.25
one_shot = true

[node name="ViolinArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 72

[node name="ViolinAttackTop" type="CollisionPolygon2D" parent="ViolinArea"]
polygon = PackedVector2Array(-10, -9, 7, -9, -2, -42)
disabled = true

[node name="ViolinAttackBottom" type="CollisionPolygon2D" parent="ViolinArea"]
position = Vector2(-3, 7)
rotation = 3.14159
polygon = PackedVector2Array(-9.99998, -9.00002, 7.00002, -8.99998, -2, -42)
disabled = true

[node name="ViolinTimer" type="Timer" parent="ViolinArea"]
wait_time = 0.25
one_shot = true

[node name="DashChargeTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.25

[node name="Reed Timer" type="Timer" parent="."]
one_shot = true

[node name="CritText" type="Label" parent="."]
visible = false
z_index = 5
offset_left = -15.0
offset_top = -34.0
offset_right = 19.0
offset_bottom = -18.0
theme_override_colors/font_color = Color(0.988235, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.14714, 0.380644, 0.721132, 1)
theme_override_constants/outline_size = 4
text = "CRIT!"

[node name="SaxDash" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_be1l6")

[node name="SaxCharge" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_jgj6o")

[node name="DrumJump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_6icqt")
volume_db = -3.5

[node name="ViolinJump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_3mujn")

[node name="BatonAttack" type="AudioStreamPlayer" parent="."]
stream = ExtResource("21_iciqu")

[node name="DrumAttack" type="AudioStreamPlayer" parent="."]
stream = ExtResource("22_4et5o")
volume_db = 6.0

[node name="CritAttack" type="AudioStreamPlayer" parent="."]
stream = ExtResource("23_ww7p6")
volume_db = -11.243

[node name="ViolinAttack" type="AudioStreamPlayer" parent="."]
stream = ExtResource("24_2icu5")
volume_db = -10.306

[node name="SaxAttack" type="AudioStreamPlayer" parent="."]
stream = ExtResource("19_m4wco")
volume_db = -10.306

[node name="Line2D" type="Line2D" parent="."]
width = 15.0
default_color = Color(1, 0.247059, 1, 1)

[node name="HoleDetector" type="RayCast2D" parent="."]
position = Vector2(1, 0)
target_position = Vector2(0, 17)
collision_mask = 4
collide_with_areas = true

[node name="HoleDetector2" type="RayCast2D" parent="."]
position = Vector2(-7, 0)
target_position = Vector2(0, 17)
collision_mask = 4
collide_with_areas = true

[connection signal="shoot" from="." to="." method="_on_shoot"]
[connection signal="body_entered" from="DrumKnockback" to="." method="_on_drum_knockback_body_entered"]
[connection signal="timeout" from="DrumKnockback/DrumTimer" to="." method="_on_drum_timer_timeout"]
[connection signal="area_entered" from="BatonArea" to="." method="_on_violin_or_baton_area_area_entered"]
[connection signal="body_entered" from="BatonArea" to="." method="_on_baton_area_body_entered"]
[connection signal="timeout" from="BatonArea/BatonAtack/BatonTimer" to="." method="_on_baton_timer_timeout"]
[connection signal="area_entered" from="ViolinArea" to="." method="_on_violin_or_baton_area_area_entered"]
[connection signal="body_entered" from="ViolinArea" to="." method="_on_violin_area_body_entered"]
[connection signal="timeout" from="ViolinArea/ViolinTimer" to="." method="_on_violin_timer_timeout"]
[connection signal="timeout" from="DashChargeTimer" to="." method="_on_dash_charge_timer_timeout"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="Reed Timer" to="." method="_on_reed_timer_timeout"]
